[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codal-tsetmc-datastore"
version = "1.1.3"
description = "Private datastore module for codal-tsetmc"
authors = [
    { name = "Mohsen Ebrahimi", email = "mohsenebrahimy.ir@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "codal-tsetmc>=2.1.3",
    "pyarmor==9.1.5",
    "pyarmor.cli.core==7.6.6"
]

[project.urls]
Homepage = "https://github.com/mohsenebrahimyir/codal-tsetmc-datastore"
Repository = "https://github.com/mohsenebrahimyir/codal-tsetmc-datastore"